# freight-company

./: .gitignore  CMakeLists.txt
persistence/: car_brands.txt  drivers.txt  vehicles.txt
src/: Clients.c  Clients.h  Drivers.c  Drivers.h  Freight.c  Freight.h  Main.c  Main.h  Trips.c  Trips.h  Vehicles.c  Vehicles.h
src/constants/: fileNames.c  fileNames.h  terminalColors.c  terminalColors.h  vehicles.c  vehicles.h
src/helpers/: Menus.c  Menus.h  terminal.c  terminal.h  validators.c  validators.h
